<resources>
    <string name="app_name">Project2_GameApp</string>
    <string name="login_fragment">Login</string>
    <string name="register_fragment">Create a New Account</string>
    <string name="game_lobby_fragment">Game Lobby</string>
    <string name="first_name_placeholder_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_placeholder_text">Email</string>
    <string name="password_placeholder_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="registration_button_text">Register a new account</string>
    <string name="register_button_text">Register</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="join_txt">Join</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_chatroom">+ New Chatroom</string>
    <string name="chatroom_name_txt">Chatroom name</string>
    <string name="create_txt">Create</string>
    <string name="leave_txt">Leave</string>
    <string name="write_msg_txt">Write your message</string>
    <string name="one_like_txt">1 Like | </string>
    <string name="request_game_txt">Request Game</string>
    <string name="create_game_txt">Create Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>