<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment" >

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/email_placeholder_text"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="60dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password_placeholder_text"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteX="59dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="245dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_button_text"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteX="58dp" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:background="@android:color/transparent"
        android:text="@string/registration_button_text"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="330dp" />
</androidx.constraintlayout.widget.ConstraintLayout>