<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment" >

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/name_placeholder_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="231dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/email_placeholder_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="232dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password_placeholder_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:text="@string/register_button_text"
        app:cornerRadius="20dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/buttonCancelToLogin"
        android:layout_width="93dp"
        android:layout_height="42dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel_button_text"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="370dp" />
</androidx.constraintlayout.widget.ConstraintLayout>